# english-management

./: .gitignore  pom.xml  readme.md
deploy/docker-compose/db/: docker-compose.yml
eng-be-ai/: README.md  env.example  main.py  pyproject.toml  test.py
eng-be-ai/config/: chroma_config.py  config.py
eng-be-ai/controller/: ai_controller.py  conversation_controller.py
eng-be-ai/service/: ai_service.py  chroma_service.py
eng-be-ai/templates/: test_ui.html
eng-be-ai/utils/: constant.py
eng-be-chat/: Dockerfile  README_AI_CONVERSATION.md  pom.xml  readme.md
eng-be-common/: pom.xml
eng-be-eureka/: Dockerfile  pom.xml
eng-be-gateway/: Dockerfile  pom.xml
eng-be-s3/: pom.xml
eng-be-user/: Dockerfile  OAUTH2_FLOW.md  pom.xml
eng-fe-admin/: README.md  angular.json  package-lock.json  package.json
eng-fe-admin/src/: index.html  main.ts
eng-fe-admin/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
eng-fe-admin/src/environments/: environment.dev.ts  environment.prod.ts
eng-fe-mess/: AUTHENTICATION.md  next.config.ts  package-lock.json  package.json
eng-fe-mess/src/: config.ts  constants.ts  middleware.tsx  schema.tsx  utils.ts
eng-fe-mess/src/app/: globals.css  layout.tsx
eng-fe-mess/src/components/: conversation-example.tsx  mode-toggle.tsx
eng-fe-mess/src/hooks/: use-auth.ts  use-meetings-filters.ts  use-mobile.ts  use-websocket.ts
eng-fe-messenger/: .gitignore  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
eng-fe-messenger/src/: index.html  styles.scss
(+373 files in other folders)
